2009-08-25  Sven Herzberg  <sven@lanedo.com>

	Fixes: NB#134552 (Progress Banner at start of maps and tutorial applet
	is broken.)

	* engine/sapwood-pixmap.c (sapwood_pixmap_render_rects_internal),
	(sapwood_crop_pixmap), (sapwood_pixmap_render_rects): properly clip
	to the cropped region; also respect the alpha mask in the cropping

2009-08-20  Christian Dywan  <christian@lanedo.com>

	NB#118393 - Crop images if they are supposed to be rendered too small

	* engine/sapwood-pixmap.c (sapwood_crop_pixmap),
	(sapwood_pixmap_render_rects): Implement sapwood_crop_pixmap and crop
	the image if it is too big.

2009-08-07  Alejandro G. Castro  <alex@igalia.com>

	Added a new debug enviroment option to enable the synchronous X
	error handling.

	* engine/sapwood-main.c,
	(theme_init): Captured the new "xtraps" option in a new boolean
	variable.
	* engine/sapwood-pixmap.h:
	* engine/sapwood-pixmap.c,
	(sapwood_pixmap_get_for_file):
	* engine/theme-pixbuf.c,
	(theme_pixbuf_render): Added conditions to avoid gdk_flush if the
	xtraps debug option is not actived.

	Fixes: NB#131431 (gdk_flush in sapwood is causing tearing)

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Don't echo the screen name; this reduces the noise from running the
	test cases

	* tests/sapwood-wrapper: drop this

	Added proper and distinguishable logging domains

	* engine/Makefile.am,
	* server/Makefile.am: set the logging domains to "sapwood-server" and
	"sapwood-engine"

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Be able to choose the depth of the pixmap by providing a colormap
	(through a GdkWindow)

	* server/sapwood-server.c (extract_pixmap_single): create a single
	GdkWindow to be able to let it provide the colormap and default depth
	for the 32 bit pixmaps later

2009-06-19  Sven Herzberg  <herzi@lanedo.com>

	NB#117873 - Dim insensitive icons with transparency instead of
	rasterizing.

	* engine/sapwood-style.c (set_transparency), (scale_or_ref),
	(render_icon): patch from Daniel Borgmann
